@@ -1,3 +1,13 @@
+2016-02-18 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-443
+	
+	* src/disort.cc (get_cb_inc_field), src/m_disort.cc (DisortCalc),
+	3rdparty/disort1.2/DISORT.f:
+	A bit of polishing of non-iso TOA inc version: Initialize TOA inc field with
+	NaN. Move check for invalid inc field values into DISORT and reduce check to
+	actually applied angles (skip upwelling ange dummy values).
+
 2016-02-17 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-442
